--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
  
 *{
@@ -94,16 +95,20 @@
  
     left: 0;
     width: 50%;
-    opacity: 0;
-    z-index: 1;
+    z-index: 2;
+    transform: translateX(400px);
+
+    
 }
+
+
  
 .formContainerSignIn{
     position: absolute;
     top: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
- 
+    
     left: 0;
     width: 50%;
     z-index: 2;
@@ -223,6 +228,16 @@
     transform: translateX(0);
 }
  
+.toggleContainer:hover{
+    border-radius: 0 100px 100px 0;
+    transform: translateX(-400px);
+
+}
+
+.toggleHover{
+    background: linear-gradient(to right, #5c6bc0, rgb(154, 0, 168));
+}
+
 .container.active .PaineltoggleRight{
     transform: translateX(200%);
 }
